# Allyanonimiser

./: .coveragerc  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIXES_SUMMARY.md  MANIFEST.in  NEXT_SESSION.md  README.md  SESSION_NOTES_2025-07-23.md  SESSION_NOTES_2025-07-25.md  SESSION_NOTES_2025-08-14.md  SYNTHETIC_DATASET_PLAN.md  __init__.py  allyanonimiser-0.1.0-py3-none-any.whl  allyanonimiser.py  codecov.yml  comprehensive_entity_examples.md  conftest.py  customer_data_anonymized_report.txt  debug_pattern.py  dspy_tutorials_expanded.ipynb  enhanced_analyzer.py  enhanced_anonymizer.py  example_absolute_import.py  example_acronym_expansion.py  example_advanced_pattern_generation.py  example_advanced_spacy_patterns.py  example_caching_benchmark.py  example_comprehensive.py  example_consolidated.py  example_csv_processing.py  example_custom_operator.py  example_custom_patterns.py  example_dataframe.py  example_dataframe_optimized.py  example_error_handling.py  example_errors.md  example_export_config.py  (+30 more)
.github/workflows/: coverage.yml  docs.yml  package.yml  release-check.yml  tests.yml
NEXT_STEPS/: index.html
advanced/anonymization-operators/: index.html
advanced/custom-operators/: index.html
advanced/pattern-generalization/: index.html
advanced/reporting/: index.html
advanced/stream-processing/: index.html
allyanonimiser/: __init__.py  allyanonimiser.py  allyanonimiser.py.bak  csv_processor.py  dataframe_processor.py  enhanced_analyzer.py  enhanced_anonymizer.py  pattern_manager.py  pattern_registry.py  reporting.py  stream_processor.py  validators.py
allyanonimiser.egg-info/: PKG-INFO
allyanonimiser/core/: __init__.py  analyzer.py  anonymizer.py  common_formats.py  conflict_resolver.py  context_analyzer.py  false_positives.py  pattern_manager.py  pattern_registry.py  recognizer_result.py  validators.py
allyanonimiser/generators/: __init__.py  au_synthetic_data.py  dataset_publisher.py  llm_augmenter.py
allyanonimiser/insurance/: __init__.py  claim_notes_analyzer.py  email_analyzer.py  medical_report_analyzer.py
allyanonimiser/io/: __init__.py  base.py  csv_processor.py  dataframe_processor.py  stream_processor.py
allyanonimiser/patterns/: __init__.py  au_patterns.py  general_intl_patterns.py  general_patterns.py  insurance_patterns.py  shared_regex.py
allyanonimiser/reporting/: __init__.py  manager.py  report.py
allyanonimiser/tests/: test_generators.py  test_main_interface.py
allyanonimiser/utils/: __init__.py  long_text_processor.py  pattern_generation.py  presidio_helpers.py  settings_manager.py  spacy_helpers.py  text_preprocessor.py
api/analyzer/: index.html
api/anonymizer/: index.html
api/main/: index.html
api/pattern-manager/: index.html
api/utilities/: index.html
bench/: README.md  make_au_insurance_eval.py  run_ai4privacy_eval.py  run_au_insurance_eval.py  run_tab_eval.py
bench/data/: au_insurance.jsonl
changelog/: index.html
custom_patterns/: my_patterns.json
docs/: NEXT_STEPS.md  README.md  benchmarks.md  build_docs.sh  changelog.md  index.md
docs/advanced/: anonymization-operators.md  custom-operators.md  pattern-generalization.md  reporting.md  stream-processing.md
docs/api/: analyzer.md  anonymizer.md  main.md  pattern-manager.md  utilities.md
docs/css/: extra.css
docs/examples/: basic.md  custom-anonymization.md  jupyter.md  pattern-creation.md
docs/getting-started/: installation.md  migration.md  quick-start.md
docs/patterns/: australian.md  custom.md  general.md  insurance.md  international.md  overview.md
docs/usage/: analyzing-text.md  anonymizing-text.md  basic-usage.md  dataframes.md
examples/basic/: index.html
examples/custom-anonymization/: index.html
examples/jupyter/: index.html
examples/pattern-creation/: index.html
generators/: au_synthetic_data.py
getting-started/installation/: index.html
getting-started/quick-start/: index.html
insurance/: __init__.py  claim_notes_analyzer.py  email_analyzer.py  medical_report_analyzer.py
patterns/: au_patterns.py  insurance_patterns.py
patterns/australian/: index.html
patterns/custom/: index.html
patterns/general/: index.html
patterns/insurance/: index.html
patterns/overview/: index.html
scripts/: smoke_release.py
search/: search_index.json
test_env/: pyvenv.cfg
test_import/: test_import.py
test_import/test_import/: check_version.py  test_site_packages.py
test_import/tests/: conftest.py  run_tests.py  test_circular_import_fix.py  test_readme_examples.py
tests/: __init__.py  conftest.py  run_functional_tests.py  run_package_tests.py  test_age_bracketing.py  test_analyzer.py  test_anonymizer.py  test_circular_import_fix.py  test_complex_csv_import.py  test_config_export.py  test_conflict_resolver.py  test_csv_import.py  test_csv_processor.py  test_custom_patterns.py  test_dataframe_processor.py  test_enhanced_pattern_definition.py  test_error_messages.py  test_example_scripts.py  test_functional.py  test_general_intl_patterns.py  test_imports.py  test_integration.py  test_label_disambiguation.py  test_main_interface.py  test_multiple_entity_masking.py  test_overlapping_entities.py  test_package_structure.py  test_pattern_generation.py  test_performance.py  test_postcode_preservation.py  test_pyarrow_integration.py  test_readme_examples.py  test_reporting.py  test_robust_detection.py  test_simplified_api.py  test_state_isolation.py  test_stream_processor.py  test_text_preprocessor.py  test_version.py
tests/test_data/: large_sample.csv  test_acronyms.csv  test_patterns.csv
tests/test_patterns/: test_patterns.json
usage/analyzing-text/: index.html
usage/anonymizing-text/: index.html
usage/basic-usage/: index.html
usage/dataframes/: index.html
utils/: __init__.py  long_text_processor.py  presidio_helpers.py  spacy_helpers.py
