[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allyanonimiser"
version = "0.1.4"
description = "Australian-focused PII detection and anonymization for the insurance industry"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Stephen Oates", email = "stephen.j.a.oates@gmail.com"}
]
keywords = ["pii", "anonymization", "privacy", "insurance", "australia"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Text Processing",
]
dependencies = [
    "spacy>=3.5.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=0.9.0",
]
llm = [
    "openai>=0.27.0",
    "anthropic>=0.3.0",
]

[project.urls]
"Homepage" = "https://github.com/srepho/Allyanonimiser"
"Bug Tracker" = "https://github.com/srepho/Allyanonimiser/issues"
"Documentation" = "https://github.com/srepho/Allyanonimiser#readme"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=allyanonimiser --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true