[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allyanonimiser"
version = "3.1.1"
description = "Australian-focused PII detection and anonymization for the insurance industry"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
authors = [
    {name = "Stephen Oates", email = "stephen.j.a.oates@gmail.com"}
]
keywords = ["pii", "anonymization", "privacy", "insurance", "australia"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Text Processing",
]
dependencies = [
    "spacy>=3.5.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "pandas>=1.0.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]
llm = [
    "openai>=0.27.0",
    "anthropic>=0.3.0",
]
stream = [
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
]

[project.urls]
"Homepage" = "https://github.com/srepho/Allyanonimiser"
"Bug Tracker" = "https://github.com/srepho/Allyanonimiser/issues"
"Documentation" = "https://github.com/srepho/Allyanonimiser#readme"

[tool.setuptools.packages.find]
include = ["allyanonimiser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
